# pak

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  PAKDIFF.md  README-BIS.md  README.md  README_PAK3.md  ast_helper.py  ast_helper.spec  file2.py  fix  hook-tiktoken.py  install.sh  llm  llm_wrapper.py  pak  pak.py  pak.spec  pak3  pak4  pak4.py  pak_analyzer.py  pak_archive_manager.py  pak_compressor.py  pak_compressor.py.bak  pak_core.py  pak_differ.py  pak_med.pak  pak_utils.py  pyproject.toml  python_extractor.py  review.md  semantic_compressor.py  target_file.py  test.pak  test_compiled.pak  test_decorator_bug.py  test_pak4_integration.py  test_pak_core_integration.py  (+2 more)
test_parallel/: test2.py  test4.txt  test_parallel.pak
tests/: conftest.py  test_llm_wrapper.py  test_pak_analyzer.py  test_pak_archive_manager.py  test_pak_compressor.py  test_pak_differ.py  test_pak_utils.py
tests/integration/: README.md  test_pakdiff_multilang.py
tests/integration/pakdiff_multilang/expected_diffs/: config_enhanced.diff  cpp_enhanced.diff  python_enhanced.diff
tests/integration/pakdiff_multilang/modified/: calculator.py  config.txt  geometry.cpp
tests/integration/pakdiff_multilang/original/: calculator.py  config.txt  geometry.cpp
